# arfs

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CITATION.cff  LICENSE.md  README.md  changelog.md  modules.rst  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/: FUNDING.yml  dependabot.yml
arfs/: __init__.py  __version__.py  allrelevant.py  association.py  benchmark.py  featselect.py  gbm.py  mrmr.py  parallel.py  preprocessing.py  sampling.py  utils.py
arfs/feature_selection/: allrelevant.py  base.py  mrmr.py  summary.py  unsupervised.py  variable_importance.py
docs/: Introduction.rst  Methods overview.rst  api.rst  arfs.feature_selection.rst  arfs.rst  conf.py  index.rst  modules.rst  requirements.txt
docs/notebooks/: BorutaShap_comparison.ipynb  arfs_boruta_borutaShap_comparison.ipynb  arfs_classification.ipynb  arfs_grootcv_custom_params.ipynb  arfs_large_data_sampling.ipynb  arfs_non_normal_loss_and_sample_weight.ipynb  arfs_on_GPU.ipynb  arfs_regression.ipynb  arfs_shap_vs_fastshap.ipynb  arfs_timeseries.ipynb  association_and_feature_selection.ipynb  basic_feature_selection.ipynb  issue_categoricals.ipynb  issue_collinearity.ipynb  large_data_sampling.ipynb  lasso_feature_selection.ipynb  mrmr_feature_selection.ipynb  mrmr_fs_VS_arfs.ipynb  preprocessing.ipynb
docs/notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
docs/notebooks/catboost_info/learn/: events.out.tfevents
example NB/: cb_model.json  pre-filtering.ipynb
example NB/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
example NB/catboost_info/learn/: events.out.tfevents
examples/: ARFS_overview.md  Boruta_comparison.ipynb  Categoricals.ipynb  Classification.ipynb  Collinearity.ipynb  Regression.ipynb  pre-filtering.ipynb
src/arfs/: .gitignore  __init__.py  association.py  benchmark.py  gbm.py  parallel.py  preprocessing.py  sampling.py  utils.py
src/arfs/dataset/data/: boston_bunch.joblib
src/arfs/dataset/descr/: housing.rst
src/arfs/feature_selection/: __init__.py  allrelevant.py  base.py  lasso.py  mrmr.py  summary.py  unsupervised.py  variable_importance.py
tests/: test_allrelevant.py  test_featselect.py
