[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arfs"
description = "All Relevant Feature Selection and Maximal Relevant minimal redundancy FS"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Thomas Bury", email = "bury.thomas@gmail.com" },
]
requires-python = ">=3.9, <3.13"
dynamic = ["version"]
keywords = ["feature-selection", "all-relevant", "selection", "MRmr"]

classifiers = [
  "Programming Language :: Python :: 3",
]

dependencies = [
    "lightgbm>=4.6.0",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "shap>=0.47.0",
    "statsmodels>=0.14.4",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
docs = [
  "ipykernel",
  "ipython_genutils",
  "pandoc",
  "sphinx",
  "sphinxawesome-theme==5.0.0b5",
  "nbsphinx==0.9.2",
  "sphinx-autodoc-typehints<1.24.0",
  "sphinx-copybutton==0.5.2",
  "sphinx-tabs==3.4.1",
#   "fasttreeshap"
]

test = [
  "pytest",
  "pytest-cov"
]

[project.urls]
Documentation = "https://github.com/ThomasBury/arfs"
Source = "https://github.com/ThomasBury/arfs"
Tracker = "https://github.com/ThomasBury/arfs/issues"
Download = "https://pypi.org/project/arfs/"

[tool.setuptools]
package-dir = { "" = "src" }
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "arfs.__version__" }

[tool.setuptools.package-data]
"arfs.dataset.data" = ["*.joblib", "*.zip"]
"arfs.dataset.description" = ["*.rst"]
