[metadata]
name = arfs
version = attr: arfs.__version__
description = All Relevant Feature Selection and Maximal Relevant minimal redundancy FS
project_urls =
    Documentation = https://github.com/ThomasBury/arfs
    Source = https://github.com/ThomasBury/arfs
    Tracker = https://github.com/ThomasBury/arfs/issues
    Download = https://pypi.org/project/arfs/
author = ThomasBury
author_email = bury.thomas@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
keywords = feature-selection, all-relevant, selection, MRmr
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
# include_package_data = True
package_dir =
    =src
packages=find_namespace:
python_requires = >=3.9
install_requires =
    # holoviews>=1.14.8
    lightgbm>=3.3.2
    matplotlib>=3.5
    numpy>=1.21
    pandas>=1.4
    # panel>=0.13
    scikit_learn>=1.0
    scipy>=1.8.0
    seaborn>=0.11.2
    shap>=0.40.0
    tqdm>=4.62.3
    # fasttreeshap>=0.1.6
    statsmodels>=0.14.0

[options.packages.find]
where = src

[options.package_data]
arfs.dataset.data =
    *.joblib
    *.zip
arfs.dataset.description =
    *.rst

[options.extras_require]
docs = 
    nbsphinx
    ipykernel
    ipython_genutils
    pandoc
    sphinx
    sphinx-autodoc-typehints
    sphinx-copybutton
    sphinx-rtd-theme
    sphinx-tabs

test = 
    pytest
    pytest-cov
