[metadata]
name = arfs
version = attr: arfs.__version__
description = All Relevant Feature Selection and Maximal Relevant minimal redundancy FS
project_urls =
    Documentation = https://github.com/ThomasBury/arfs
    Source = https://github.com/ThomasBury/arfs
    Tracker = https://github.com/ThomasBury/arfs/issues
    Download = https://pypi.org/project/arfs/
author = ThomasBury
author_email = bury.thomas@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
keywords = feature-selection, all-relevant, selection, MRmr
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
# include_package_data = True
package_dir =
    =src
packages=find_namespace:
python_requires = >=3.9
install_requires =
    lightgbm>=4.0.0
    matplotlib>=3.5
    numpy>=1.21
    pandas>=1.4
    scikit_learn>=1.0
    scipy>=1.8.0
    seaborn>=0.11.2
    shap>=0.40.0
    tqdm>=4.62.3
    statsmodels>=0.14.0

[options.packages.find]
where = src

[options.package_data]
arfs.dataset.data =
    *.joblib
    *.zip
arfs.dataset.description =
    *.rst

[options.extras_require]
docs = 
    ipykernel
    ipython_genutils
    pandoc
    sphinx<7.0.0
    sphinxawesome-theme==4.1.0
    nbsphinx==0.9.2
    sphinx-autodoc-typehints<1.24.0
    sphinx-copybutton==0.5.2
    sphinx-tabs==3.4.1
    fasttreeshap

test = 
    pytest
    pytest-cov
